<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_home"
        android:icon="@drawable/home_icon"
        android:title="@string/bottom_menu_home" />
    <item
        android:id="@+id/bottom_search"
        android:icon="@drawable/search_icon"
        android:title="@string/bottom_menu_search" />
    <item
        android:id="@+id/bottom_add_new"
        android:icon="@drawable/add_icon"
        android:title="@string/bottom_menu_add_new" />
    <item
        android:id="@+id/bottom_chat"
        android:icon="@drawable/chat_icon"
        android:title="@string/bottom_menu_chats" />
    <item
        android:id="@+id/bottom_profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/bottom_menu_profile" />


</menu>