<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="50dp"
    android:paddingBottom="50dp"
    android:background="@color/white"

    tools:context=".Login_Page"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/gear_nexus_logo"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginActivity"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:textStyle="bold"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_user_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_bg"
        android:hint="Enter Your Email Here"
        android:padding="10dp"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:text="@string/Password"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_user_pass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:background="@drawable/input_bg"
        android:layout_marginTop="10dp"
        android:hint="Enter Your Password Here"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LoginActivity"

        android:layout_marginTop="30dp"
        android:background="@drawable/button_background"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NewAccount"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SignupActivity"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="5dp"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>
